--- a/ambc.cabal
+++ b/ambc.cabal
@@ -15,14 +15,12 @@ executable ambc
   build-depends:  
                   base                       == 4.6.0.1,
                   parsec                     == 3.1.5
-  other-modules:  UntypedLambda.Syntax,
-                  UntypedLambda.Parser
 
 test-suite all-tests
   type:           exitcode-stdio-1.0
   hs-source-dirs: src, test
   main-is:        Test.hs
-  ghc-options:    -Wall -Werror
+  ghc-options:    -Wall -Werror -threaded -rtsopts -O2
   build-depends:  
                   base                       == 4.6.0.1,
                   HUnit                      == 1.2.5.2,
