--- a/ambc.cabal
+++ b/ambc.cabal
@@ -14,7 +14,10 @@ executable ambc
   ghc-options:    -Wall -Werror
   build-depends:  
                   base                       == 4.6.0.1,
+                  haskeline                  == 0.7.1.2,
+                  mtl                        == 2.1.2,
                   parsec                     == 3.1.5
+  default-language: Haskell2010
 
 test-suite all-tests
   type:           exitcode-stdio-1.0
@@ -30,3 +33,4 @@ test-suite all-tests
                   test-framework-hunit       == 0.3.0.1, 
                   test-framework-quickcheck2 == 0.3.0.2
   x-uses-tf:      true
+  default-language: Haskell2010
