--- a/ambc.cabal
+++ b/ambc.cabal
@@ -14,6 +14,7 @@ executable ambc
   ghc-options:    -Wall -Werror
   build-depends:  
                   base                       == 4.6.0.1,
+                  containers                 == 0.5.0.0,
                   haskeline                  == 0.7.1.2,
                   mtl                        == 2.1.2,
                   parsec                     == 3.1.5
@@ -26,6 +27,7 @@ test-suite all-tests
   ghc-options:    -Wall -Werror -threaded -rtsopts -O2
   build-depends:  
                   base                       == 4.6.0.1,
+                  containers                 == 0.5.0.0,
                   HUnit                      == 1.2.5.2,
                   parsec                     == 3.1.5,
                   QuickCheck                 == 2.6, 
