--- a/ambc.cabal
+++ b/ambc.cabal
@@ -16,6 +16,7 @@ executable ambc
                   base                       == 4.6.0.1,
                   containers                 == 0.5.0.0,
                   haskeline                  == 0.7.1.2,
+                  llvm-general               == 3.3.10.0,
                   mtl                        == 2.1.2,
                   parsec                     == 3.1.5
   default-language: Haskell2010
