--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ before_install:
   - sudo apt-get update
 install:
   - sudo apt-get install llvm-3.3
-  - cabal install --only-dependencies --only-dependencies
+  - cabal install --only-dependencies --enable-tests
